--- a/custom_visualization/custom_colors.qmd
+++ b/custom_visualization/custom_colors.qmd
@@ -33,7 +33,8 @@ library(viridisLite)
 You can add options to executable code like this
 
 ```{r}
-
+#install.packages("paletteer")
+library(paletteer)
 my_palette_classic_blue <- paletteer_c("ggthemes::Classic Blue", 30)
 
 my_palette_Harmonic <- paletteer_c("grDevices::Harmonic", 30)
@@ -125,7 +126,7 @@ power_yoga_theme <- c("#b82677", "#ec7545", "#a9d2cc", "#f4f5f6", "#221f20")
 ```
 
 ```{r}
-feminine_theme <- c("#f2aa98", "#fcf1ef", "#bfbfbf", "#f4f4f4", "#00000")
+feminine_theme <- c("#f2aa98", "#fcf1ef", "#bfbfbf", "#f4f4f4", "#000000")
 ```
 
 ```{r}
