--- a/example_plots/highcharts_drilldowns_tutorial_interactive_charts.Rmd
+++ b/example_plots/highcharts_drilldowns_tutorial_interactive_charts.Rmd
@@ -29,7 +29,7 @@ library(highcharter)
 ## Data
 
 ```{r data}
-sales <- read.csv2("/Users/ulrike_imac_air/projects/R_themes/examples/data.csv")
+sales <- read.csv2("data.csv")
 sales
 ```
 
