--- a/dashboards/simple_dashboard.qmd
+++ b/dashboards/simple_dashboard.qmd
@@ -3,6 +3,7 @@ title: "Simple Dashboard in R"
 format: html
 editor: visual
 ---
+### Not working yet
 
 ## Creating a simple dashboard in R with shiny
 
