--- a/Python/essential_code_snippets.ipynb
+++ b/Python/essential_code_snippets.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/ulrike_imac_air/projects/DataScienceProjects/Forbes/Forbes/Forbes_queries_csv/forbes_data_til_2024_04_sum_continent.csv')"
+    "df = pd.read_csv('your.csv')"
    ]
   },
   {
