--- a/dashboards/gapminder.qmd
+++ b/dashboards/gapminder.qmd
@@ -1,7 +1,7 @@
 
 ---
 title: "Gapminder"
-author: "Quinten Sandberg"
+author: "me"
 format: 
   dashboard:
     embed-resources: true
@@ -9,6 +9,13 @@ theme:
   - yeti
   - ../styles/styles.scss
 ---
+```{r}
+install.packages("ggbump")
+install.packages("countrycode")
+install.packages("rnaturalearth")
+install.packages("crosstalk")
+```
+
 
 ```{r}
 #| warning: false
